[tool.poetry]
name = "opentracing-compose"
version = "0.1.1"
description = "Opentracing tracer that composes other tracers"
authors = ["Brian Downing <bdowning@lavos.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bdowning/opentracing-compose"
repository = "https://github.com/bdowning/opentracing-compose"

[tool.poetry.dependencies]
python = "^3.7"
opentracing = "*"

[tool.poetry.dev-dependencies]
assertpy = "*"
black = {version = "*", allow-prereleases = true}
isort = "*"
pytest = "*"
mypy = "*"
flake8 = "*"
ipython = "*"
pytest-cov = "*"
bump2version = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
